# dmart

./: .gitignore  ANALISIS_TECNICO_DMART.md  Cargo.toml  README.md  dmart.service  keep-alive.sh  start-server.sh
dmart-app/: .browserslistrc  Cargo.toml  Trunk.toml  index.html  input.css  tailwind.config.js
dmart-app/.cargo/: config.toml
dmart-app/src/: api.rs  app.rs  lib.rs  main.rs
dmart-app/src/components/: chart.rs  clinical_alerts.rs  dashboard_kit.rs  location_picker.rs  mod.rs  radar_chart.rs  severity_badge.rs  skin_picker.rs  slider.rs  theme_toggle.rs  toggle.rs  ui_kit.rs
dmart-app/src/components/scales/: apache.rs  gcs.rs  measurement_group.rs  mod.rs  news.rs  saps.rs  sofa.rs
dmart-app/src/data/: geodata.json
dmart-app/src/pages/: admin.rs  dashboard.rs  login.rs  measurement.rs  mod.rs  patient_detail.rs  patient_edit.rs  patients.rs  register.rs  uci_stats.rs
dmart-app/src/stores/: mod.rs  patients.rs  theme.rs
dmart-launcher/: Cargo.toml
dmart-launcher/src/: main.rs
dmart-server/: Cargo.toml
dmart-server/src/: audit.rs  auth.rs  cache.rs  crypto.rs  db.rs  main.rs  rbac.rs  security.rs
dmart-server/src/api/: admin.rs  auth.rs  export.rs  measurements.rs  mod.rs  patients.rs  scales.rs  stats.rs
dmart-server/src/middleware/: auth.rs
dmart-shared/: Cargo.toml
dmart-shared/src/: lib.rs  models.rs  scales.rs  validation.rs
dmart-shared/tests/: scale_tests.rs
docs/: APACHE_II.md  API.md  ARQUITECTURA.md  GCS.md
scripts/: optimize-wasm.sh
