[workspace]
members = [
    "dmart-shared",
    "dmart-server",
    "dmart-app",
]
resolver = "2"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }

[workspace.metadata]
cross = { target = "x86_64-unknown-linux-gnu" }

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
strip = true
